--- a/css file/media.css
+++ b/css file/media.css
@@ -1,4 +1,4 @@
-@media (max-width: 600px) {
+@media (max-width: 480px) {
     .nav-menu{
         display: none;
     }
@@ -11,16 +11,20 @@
     .slide .slide-img{
         position: static;
         translate: 0 0%;
-        width: 150%;
-        height: 150%;
+        width: 200%;
+        height: 100%;
+        translate: 0 10%;
     }
     .content{
-        width: 500px;
-        left: 7%;
-        right: 0;
+        width: 525px;
+        left: -3%;
+        top: 5%;
+    }
+    .content:nth-of-type(1){
+        width: 1000px;
     }
     .models.actve-2{
-        width: 500px;
+        width: 700px;
         filter: drop-shadow(15px 5px 0 gold);
     }
     .prgraph{
@@ -38,45 +42,67 @@
         display: flex;
     }
     /* قسم مين احنا */
+    .half img{
+        transform: scale(1.9);
+    }
     .top p,.span{
-        font-size: 16vw;
+        font-size: 20vw;
+        translate: 0 2.5%;
     }
     .top .span{
-        font-size: 10vw;
+        font-size: 15vw;
+    }
+    .paper-filde{
+        width: 250%;
     }
     .bottom p:nth-child(1){
-        font-size: 4vw;
+        font-size: 6vw;
     }
     .p-social{
-        font-size: 3vw;
+        font-size: 5vw;
         translate: 0 25%;
     }
     .social-contact{
         translate: 0 25%;
+        gap: 50PX;
+    }
+    .social-contact a{
+        transform: scale(1.5);
     }
     /* قسم المنتجات  */
     .text-filde:nth-child(1) h1{
-        font-size: 16vw;
+        font-size: 17vw;
     }
     .text-filde:nth-child(1) h1 p{
-        font-size: 2.2vw;
+        font-size: 2.4vw;
         translate: 85% 250%;
     }
     .product-filde , .pro{
         width: 70%;
     }
+    .product{
+        width: 180%;
+    }
+    .product:nth-child(1){
+        width: 170%;
+    }
+    .product:nth-child(2){
+        width: 165%;
+        rotate: 10deg;
+    }
     .p-p{
-        font-size: 7vw;
+        font-size: 8vw;
     }
     /* قسم الاراء */
     .comment-section h1{
-        font-size: 16vw;
+        font-size: 20vw;
+        translate: 0 50%;
     }
     .comment-section h1 span{
-        font-size: 7vw;
+        font-size: 11vw;
     }
     .img-reviwe{
-        width: 50%;
+        width: 90%;
         height: 50%;
     }
     .img-reviwe:nth-child(2){
@@ -85,51 +111,60 @@
     .img-reviwe:nth-child(3){
         filter: blur(1px);
     }
+    /* from here */
     .comments-filde{
-        height: 95%;
-        bottom: 5%;
+        height: 50%;
         flex-direction: column;
+        translate: 0 -10%;
     }
     .comment{
-        width: 40%;
+        width: 60%;
+        margin: 0 5%;
         translate: 0 0;
         bottom: 0;
+        position: static;
     }
     .comment:nth-child(1){
+        align-self: flex-start;
         rotate: 0deg;
-        left: 10%;
-        top: 0;
-    }
-    .comment:nth-child(2){
-        left: 10%;
-        bottom: 5%;
     }
     .comment:nth-child(3){
-        rotate: -0deg;
-        right: 5%;
-        top: 20%;
+        align-self: flex-end;
+        rotate: 0deg;
     }
     .profile-pic{
         width: 40px;
         height: 40px;
     }
     .comment h6{
-        font-size: 1.5vw;
-        translate: -35% 950%;
+        font-size: 2vw;
+        translate: -25% 500%;
     }
     .comment p{
-        font-size: 11px;
-    }
-    .img-move img{
-        width: 85%;
+        font-size: 14px;
     }
     /* القسم السفلي */
-    
+    .brands{
+        width: 200%;
+    }
+    .brands:nth-child(2){
+        left: 150%;
+    }
+    .img-move img{ 
+        width: 90%;
+    }
+    .part h1 {
+        font-size: 5vw;
+    }
     .street-part , .help-part{
+        transform: scale(1.1);
         width: 50%;
         height: 50%;
     }
     .street-part ul , .help-part ul{
+        translate: 0 30%;
+        transform: scale(1.3);
+        translate: 0 30%;
         gap: 3px;
     }
     .email-part{
@@ -160,6 +195,7 @@
         display: none;
     }
     .email-part a{
+        font-size: 5vw;
         display: block;
         text-decoration: none;
         color: black;
@@ -173,14 +209,14 @@
     }
     /* قسم المميزات */
     .offer-section h1{
-        font-size: 10vw;
+        font-size: 15vw;
     }
     .offer-section h1 span{
-        font-size: 17vw;
+        font-size: 25vw;
     }
     .curcle-offers{
-        width: 45%;
-        height: 60%;
+        width: 75%;
+        height: 65%;
         align-self: flex-end;
         translate: 0 -10%;
         border-radius: 0 0 30px 30px;
@@ -192,12 +228,12 @@
     }
     .spicals-filde{
         height: 70%;
-        width: 100%;
+        width: 90%;
         gap: 25%;
-        translate: 50% -10%;
+        translate: 15% -10%;
     }
     .spicals-filde:nth-last-child(1){
-        translate: -50% 10%;
+        translate: -15% 10%;
     }
     .offers{
         border-radius: 30px 30px;
@@ -213,8 +249,11 @@
         border-radius: 30px 30px;
     }
     .offers p{
-        font-size: 2vw;
+        font-size: 3.5vw;
         translate: -10% 0;
+    }
+    .offers p span{
+        font-size: 4vw;
     }
     .s2 .offers p {
         translate: 10% 0;
@@ -254,5 +293,294 @@
     }
     .blank{
         display: none;
+    }
+}
+@media (min-width: 480px) and (max-width: 834px){
+    .nav-menu{
+        display: none;
+    }
+    .nav-menu li a{
+        display: none;
+    }
+    .slide{
+        justify-content: center;
+    }
+    .slide .slide-img{
+        position: static;
+        translate: 0 0%;
+        width: 200%;
+        height: 100%;
+        translate: 0 10%;
+    }
+    .content{
+        width: 700px;
+        left: 10%;
+        top: 5%;
+    }
+    .content:nth-of-type(1){
+        width: 1000px;
+    }
+    .models.actve-2{
+        width: 900px;
+        filter: drop-shadow(15px 5px 0 gold);
+    }
+    .prgraph{
+        align-self: center;
+        text-align: center;
+    }
+    /* شي على جنب : المنيو الثاني  */
+    .b-menu{
+        display: flex;
+        translate: 0 -0%;
+    }
+    .menu-filde{
+        display: flex;
+    }
+    .nav-plus{
+        display: flex;
+    }
+    /* قسم مين احنا  */
+    .top p,.span{
+        font-size: 15vw;
+        translate: 0 2.5%;
+    }
+    .top .span{
+        font-size: 10vw;
+    }
+    .bottom p:nth-child(1){
+        font-size: 4.5vw;
+    }
+    .p-social{
+        font-size: 3vw;
+        translate: 0 25%;
+    }
+    .social-contact{
+        translate: 0 25%;
+        gap: 50PX;
+    }
+    .social-contact a{
+        transform: scale(1.5);
+    }
+    /* قسم المميزات  */
+    .offer-section h1{
+        font-size: 10vw;
+    }
+    .offer-section h1 span{
+        font-size: 15vw;
+    }
+    .curcle-offers{
+        width: 60%;
+        height: 65%;
+        align-self: flex-end;
+        translate: 0 -10%;
+        border-radius: 0 0 30px 30px;
+    }
+    .curcle-offers img {
+        width: 60%;
+        align-self: flex-start;
+        translate: 0 -72%;
+    }
+    .spicals-filde{
+        height: 75%;
+        width: 100%;
+        gap: 25%;
+        translate: 15% -10%;
+    }
+    .spicals-filde:nth-last-child(1){
+        translate: -15% 10%;
+    }
+    .offers{
+        width: 100%;
+        border-radius: 30px 30px;
+    }
+    .s1 .offers:nth-child(1) , .s1 .offers:nth-child(2){
+        width: 100%;
+    }
+    .s2 .offers:nth-child(1) , .s2 .offers:nth-child(2){
+        width: 100%;
+        translate: 0 0;
+    }
+    .spicals-filde:nth-last-child(1) .offers{
+        border-radius: 30px 30px;
+    }
+    .offers p{
+        font-size: 2.6vw;
+        translate: -10% 0;
+    }
+    .offers p span{
+        font-size: 4vw;
+    }
+    .s2 .offers p {
+        translate: 10% 0;
+    }
+    .offers img{
+        width: 30%;
+        translate: 0 0;
+    }
+    .s1 .offers:nth-child(1)  img{
+        right: 0;
+        translate: 30% -25%;
+    }
+    .s1 .offers:nth-child(2)  img{
+        width: 35%;
+        right: 0;
+        translate: 30% -35%;
+    }
+    .s1 .offers:nth-child(3)  img{
+        width: 18%;
+        right: 0;
+        translate: 20% -30%;
+    }
+    .s2 .offers:nth-child(1)  img{
+        width: 27%;
+        left: 0;
+        translate: -20% -30%;
+    }
+    .s2 .offers:nth-child(2)  img{
+        width: 25%;
+        left: 0;
+        translate: -20% -35%;
+    }
+    .s2 .offers:nth-child(3)  img{
+        width: 30%;
+        left: 0;
+        translate: -20% -40%;
+    }
+    /* قسسم المنتجات  */
+    .text-filde:nth-child(1) h1{
+        font-size: 15vw;
+    }
+    .text-filde:nth-child(1) h1 p{
+        font-size: 2.2vw;
+        translate: 85% 250%;
+    }
+    .product-filde , .pro{
+        width: 70%;
+    }
+    .product{
+        width: 150%;
+    }
+    .product:nth-child(1){
+        width: 140%;
+    }
+    .product:nth-child(2){
+        width: 135%;
+        rotate: 10deg;
+    }
+    .p-p{
+        font-size: 7vw;
+    }
+    /* قسم الاراء */
+    .comment-section h1{
+        font-size: 15vw;
+        translate: 0 50%;
+    }
+    .comment-section h1 span{
+        font-size: 8vw;
+    }
+    .img-reviwe{
+        width: 70%;
+        height: 50%;
+    }
+    .img-reviwe:nth-child(2){
+        filter: blur(1px);
+    }
+    .img-reviwe:nth-child(3){
+        filter: blur(1px);
+    }
+    /* from here */
+    .comments-filde{
+        height: 50%;
+        flex-direction: column;
+        translate: 0 -10%;
+    }
+    .comment{
+        width: 50%;
+        margin: 0 5%;
+        translate: 0 0;
+        bottom: 0;
+        position: static;
+    }
+    .comment:nth-child(1){
+        align-self: flex-start;
+        rotate: 0deg;
+    }
+    .comment:nth-child(3){
+        align-self: flex-end;
+        rotate: 0deg;
+    }
+    .profile-pic{
+        width: 60px;
+        height: 60px;
+    }
+    .comment h6{
+        font-size: 2vw;
+        translate: 10% 200%;
+    }
+    .comment p{
+        font-size: 22px;
+    }
+    /* القسم السفلي */
+    .brands{
+        width: 200%;
+    }
+    .brands:nth-child(2){
+        left: 150%;
+    }
+    .img-move img{ 
+        width: 70%;
+    }
+    .part h1 {
+        font-size: 4vw;
+    }
+    .street-part , .help-part{
+        transform: scale(1.1);
+        width: 50%;
+        height: 50%;
+    }
+    .street-part ul , .help-part ul{
+        translate: 0 50%;
+        transform: scale(1.5);
+        gap: 3px;
+    }
+    .email-part{
+        width: 100%;
+        height: 20%;
+        justify-content: flex-start;
+        padding-top: 2.2%;
+    }
+    .email-part input{
+        display: none;
+    }
+    .email-part button{
+        display: none;
+    }
+    .email-part button svg{
+        display: none;
+    }
+    .email-part label{
+        display: none;
+    }
+    .email-part hr{
+        display: none;
+    }
+    .email-part p{
+        display: none;
+    }
+    .email-part p a{
+        display: none;
+    }
+    .email-part a{
+        font-size: 4vw;
+        display: block;
+        text-decoration: none;
+        color: black;
+        background-color: white;
+        padding: 5px 10px;
+        border-radius: 6px;
+    }
+    .email-part a:hover{
+        padding: 5px 14px;
+        letter-spacing: 3px;
     }
 }
