--- a/css file/style.css
+++ b/css file/style.css
@@ -85,7 +85,7 @@ body{
 /* ناف الجوال */
 .b-menu{
     position: absolute;
-    top: 35px;
+    top: 75px;
     right: 0;
     display: none;
     width: 10%;
@@ -98,7 +98,7 @@ body{
     justify-content: center;
     align-items: center;
     gap: 5px;
-    z-index: 50000000;
+    z-index: 10000000000000000;
 }
 .b-menu:hover{
     transform: scale(1.1);
@@ -194,7 +194,7 @@ body{
     align-self: flex-end;
     justify-self: flex-start;
     transition: 1s ease;
-    z-index: 0;
+    z-index: 1;
 }
 .models.actve-2{
     width: 600px;
@@ -204,10 +204,10 @@ body{
 }
 .content{
     position: absolute;
-    z-index: 1;
+    z-index: 0;
     width: 700px;
     left:-10px;
-    translate: 0 -100%;
+    translate: 0 -115%;
     transition: 1s ease;
 }
 .content.actve-3{
@@ -246,7 +246,7 @@ body{
     background-color: white;
 }
 .half{
-    width: 75%;
+    width: 100%;
     height: 50%;
     position: relative;
     display: flex;
@@ -305,6 +305,7 @@ body{
     text-align: center;
     z-index: 0;
     font-size: 1.5vw;
+    font-weight: 700;
     text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px  1px 0 white, 1px  1px 0 white;
     letter-spacing: 2px;
     translate: 0 100%;
@@ -730,7 +731,6 @@ body{
     align-items: center;
     width: 100%;
     height: 25%;
-    bottom: 10%;
     z-index: 1;
 }
 .comment{
