--- a/css file/shop.css
+++ b/css file/shop.css
@@ -11,7 +11,7 @@ body{
 }
 .shop-head{
     width: 100%;
-    height: 15%;
+    height: 13%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,6 +52,14 @@ body{
 }
 .ad-filde{
     border: 2px solid black;
+    align-self: flex-start;
     width: 80%;
-    height: 100%;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.ad-img{
+    width: 55%;
+
 }
