--- a/css file/style.css
+++ b/css file/style.css
@@ -20,7 +20,6 @@ body{
     justify-content: center;
     align-items: center;
     position: fixed;
-    
     z-index: 2;
 }
 .head{
@@ -147,7 +146,7 @@ body{
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    background-color: white;
+    background: radial-gradient(white,rgb(250, 250, 250));
 }
 .slides{
     width: 100%;
@@ -159,12 +158,6 @@ body{
     position: relative;
     overflow: hidden;
 }
-.slide-section .bg{
-    position: absolute;
-    object-fit: cover;
-    width: 100%;
-    filter: blur(2px);
-}
 .slide{
     position: absolute;
     width: 100%;
@@ -172,67 +165,87 @@ body{
     overflow: hidden;
     opacity: 1;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
 }
-.slide .slide-img{
+.slide h1{
+    font-size:25vw;
+    color: rgb(235, 235, 235);
+}
+.dot-filde{
     position: absolute;
-    right: -400px;
-    width: 80%;
-    height: 80%;
-    translate: -20% 30%;
-    opacity: 0;
-    
+    right: 0;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    translate: 90% 65%;
 }
-.slide-img.actve{
+.dot{
+    width: 5px;
+    height: 50px;
+    background-color: rgb(182, 182, 182);
+    border-radius:5px;
+    z-index: 2;
+}
+.actve-1{
+    background-color: black;
+}
+.content{
+    position: absolute;
+    width: 40%;
+    translate: 90% -50%;
+    opacity: 0;
+}
+.actve-3{
+    translate: 60% -50%;
     opacity: 1;
 }
 .models{
     position: absolute;
-    width: 500px;
+    width: 40%;
     z-index: 2;
-    translate: 0 100%;
     align-self: flex-end;
-    justify-self: flex-start;
     transition: 1s ease;
     z-index: 1;
+    filter: drop-shadow(-10px 10px 0px rgb(190, 190, 190));
+    opacity: 0;
+    translate: 0 100%;
 }
-.models.actve-2{
-    width: 600px;
-    object-fit: cover;
-    translate: 0 30%;
-    filter: drop-shadow(10px -5px 0 gold) drop-shadow(-10px 5px rgba(0, 0, 0, 0.384));
+.slide:nth-last-child(2) .models{
+    width: 45%;
 }
-.content{
-    position: absolute;
-    z-index: 0;
-    width: 700px;
-    left:-10px;
-    translate: 0 -115%;
-    transition: 1s ease;
+.slide:nth-last-child(1) .models{
+    width: 70%;
 }
-.content.actve-3{
-    translate: 0 0;
+.actve-2{
+    translate: 0 50%;
+    opacity: 1;
 }
 .prgraph{
     position: absolute;
-    left: 50px;
-    bottom: -100%;
     font-family: "Righteous", system-ui;
-    font-size: 40px;
+    font-size: 3vw;
     font-weight: 300;
     letter-spacing: -2px;
+    padding-left: 10px;
     text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px  1px 0 white, 1px  1px 0 white;
-    align-self: flex-end;
+    border-left: 5px solid black;
     z-index: 1;
     transition: 1s ease;
+    left: 0;
+    translate: -0% 100%;
+    opacity: 0;
 }
 .prgraph span{
     font-weight: 800;
+    letter-spacing: 2px;
     text-shadow: 4px 4px 0 gold;
     transition: 2s ease;
 }
-.prgraph.actve-4{
-    bottom: 50px;
+.actve-4{
+    opacity: 1;
+    translate: 50% 100%;
 }
 /* قسم مين احنا */
 .about-section{
