--- a/css file/media.css
+++ b/css file/media.css
@@ -15,37 +15,35 @@
     }
     .content{
         left: 0;
-        translate: 0 -150%;
+        translate: 0 -120%;
         width: 100%;
     }
     .models{
-        width: 120%;
+        width: 100%;
         align-self: center;
         translate: 0% 100%;
     }
     .slide:nth-last-child(2) .models{
-        width: 130%;
-    }
-    .slide:nth-last-child(1) .models{
-        width: 175%;
+        width: 110%;
     }
     .actve-2{
         translate: 0% 20%;
     }
     .prgraph{
         left: unset;
-        translate: 0% 500%;
+        translate: 0% 300%;
         font-size: 8vw;
         border-left: none;
         border-bottom: 5px solid black;
         text-align: center;
     }
     .actve-4{
-        translate: 0% 300%;
+        translate: 0% 200%;
     }
     /* شي على جنب : المنيو الثاني  */
     .b-menu{
         display: flex;
+        translate: 0 -100%;
     }
     .menu-filde{
         display: flex;
@@ -79,7 +77,7 @@
         gap: 50PX;
     }
     .social-contact a{
-        transform: scale(1.5);
+        transform: scale(1.1);
     }
     /* قسم المنتجات  */
     .text-filde:nth-child(1) h1{
@@ -87,7 +85,7 @@
     }
     .text-filde:nth-child(1) h1 p{
         font-size: 2.4vw;
-        translate: 85% 250%;
+        translate: 80% 200%;
     }
     .product-filde , .pro{
         width: 70%;
@@ -150,10 +148,10 @@
     }
     .comment h6{
         font-size: 2vw;
-        translate: -25% 500%;
+        translate: -25% 400%;
     }
     .comment p{
-        font-size: 14px;
+        font-size: 13px;
     }
     /* القسم السفلي */
     .brands{
@@ -175,7 +173,7 @@
     }
     .street-part ul , .help-part ul{
         translate: 0 30%;
-        transform: scale(1.3);
+        transform: scale(1.1);
         translate: 0 30%;
         gap: 3px;
     }
@@ -307,7 +305,7 @@
         display: none;
     }
 }
-@media (min-width: 480px) and (max-width: 834px){
+@media (min-width: 480px) and (max-width: 904px){
     .nav-menu{
         display: none;
     }
@@ -320,37 +318,34 @@
     .dot-filde{
         z-index: 3;
         left: 5%;
-        translate: 0 -20%;
+        translate: 0 0%;
     }
     .content{
-        left: 0;
-        translate: 0 -80%;
-        width: 100%;
-    }
-    .models{
-        width: 70%;
-        align-self: center;
-        translate: 0% 100%;
-    }
-    .slide:nth-last-child(2) .models{
+        translate: -80% -80%;
         width: 75%;
     }
-    .slide:nth-last-child(1) .models{
-        width: 110%;
+    .actve-3{
+        translate: -20% -80%;
+    }
+    .models{
+        width: 55%;
+        align-self: center;
+        translate: 50% 100%;
+    }
+    .slide:nth-last-child(2) .models{
+        width: 65%;
     }
     .actve-2{
-        translate: 0% 20%;
+        translate: 50% 20%;
     }
     .prgraph{
         left: unset;
-        translate: 0% 200%;
-        font-size: 7vw;
-        border-left: none;
-        border-bottom: 5px solid black;
-        text-align: center;
+        translate: -100% 180%;
+        font-size: 5vw;
+        border-left: 5px solid black;
     }
     .actve-4{
-        translate: 0% 180%;
+        translate: -35% 180%;
     }
     /* شي على جنب : المنيو الثاني  */
     .b-menu{
